cursive-bootstrap/tests/ui/E-TYP/E-TYP-2401.cursive
// RUN: compile-fail
// DIAG: E-TYP-2401
// SPEC: 5.3
// DESC: Non-modal type implements modal class

class Resource {
    @Open { }
    @Closed { }
}

record Handle {
    value: i32
}

implements Resource for Handle { } //~ ERROR E-TYP-2401

public procedure main(move ctx: Context) -> i32 {
    return 0
}
